Add goal management methods