@@ -1,14 +1,16 @@
 package com.skillsmatrixapplication.service;
 
 import com.skillsmatrixapplication.dto.GoalResponse;
+import com.skillsmatrixapplication.persistence.entity.Employee;
 import com.skillsmatrixapplication.persistence.entity.Goal;
+import com.skillsmatrixapplication.persistence.repository.EmployeeRepository;
 import com.skillsmatrixapplication.persistence.repository.GoalRepository;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -16,15 +18,32 @@ import java.util.stream.Collectors;
 public class GoalService {
 
     private final GoalRepository goalRepository;
+    private final EmployeeRepository employeeRepository;
 
     public List<GoalResponse> getEmployeeGoals(Long employeeId) {
         return goalRepository.findAll().stream()
                 .filter(goal -> goal.getEmployee().getId().equals(employeeId))
                 .map(GoalResponse::of)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<GoalResponse> getCurrentEmployeeGoals() {
+        String currentEmployeeEmail = SecurityContextHolder.getContext().getAuthentication().getName();
+        Employee currentEmployee = employeeRepository.findByEmail(currentEmployeeEmail)
+                .orElseThrow(() -> new RuntimeException("Current employee not found"));
+
+        return goalRepository.findAll().stream()
+                .filter(goal -> goal.getEmployee().getId().equals(currentEmployee.getId()))
+                .map(GoalResponse::of)
+                .toList();
     }
 
     public Goal createGoal(Goal goal) {
+        String currentEmployeeEmail = SecurityContextHolder.getContext().getAuthentication().getName();
+        Employee currentEmployee = employeeRepository.findByEmail(currentEmployeeEmail)
+                .orElseThrow(() -> new RuntimeException("Current employee not found"));
+
+        goal.setEmployee(currentEmployee);
         return goalRepository.save(goal);
     }
 
@@ -37,6 +56,6 @@ public class GoalService {
     }
 
     public void deleteGoal(Long id) {
-            goalRepository.deleteById(id);
+        goalRepository.deleteById(id);
     }
 }
